<resources>
    <string name="app_name">PMSUMail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string-array name="pref_syncSortingType_entries">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="pref_syncSortingType_values">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="pref_syncRefreshingType_entries">
        <item>1min</item>
        <item>5min</item>
        <item>10min</item>
        <item>1h</item>
        <item>10h</item>
    </string-array>
    <string-array name="pref_syncRefreshingType_values">
        <item>1min</item>
        <item>5min</item>
        <item>10min</item>
        <item>1h</item>
        <item>10h</item>
    </string-array>

    <string name="pref_sort_messages">Sort messages</string>
    <string name="pref_sort_messages_key">pref_sort_messages_key</string>
    <string name="pref_sort_messages_by_date_key">pref_sort_messages_by_date_key</string>
    <string name="pref_sort_messages_by_date_title">Sort by date</string>
    <string name="pref_sort_messages_by_date_summary">Sort messages by date</string>
    <string name="pref_sort_messages_by_date_key_list">pref_sort_messages_by_date_key_list</string>
    <string name="pref_refresh_messages_by_date_key_list">pref_refresh_messages_by_date_key_list</string>
    <string name="pref_refresh_messages">Refresh messages</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--Message activity-->
    <string name="send_to_email_hint">Send to</string>
    <string name="subject_email_hint">Subject</string>
    <string name="content_email_hint">Content…</string>
    <string name="cc_hint">cc</string>
    <string name="button_send">Send message</string>
    <string name="navigation_header">Navigation header</string>
    <string name="profile">Profile</string>
    <string name="folders">Folders</string>
    <string name="settings">Settings</string>
    <string name="folder">Folder</string>
    <string name="create_email">Create email</string>
    <string name="emails">Emails</string>
    <string name="email">Email</string>
    <string name="create_contact">Create contact</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="create_contact_name">First name</string>
    <string name="create_contact_last_name">Last name</string>
    <string name="create_contact_email">Email</string>
    <string name="button_create_contact">Create contact</string>
    <string name="button_create_folder">Create folder</string>
    <string name="create_folder_name">Folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="replay">Replay</string>
    <string name="replay_all">Replay all</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="edit_folder">Edit folder</string>
    <string name="createContactActivity">Create contact</string>
    <string name="contactActivity">Contact</string>
    <string name="contactsActivity">Contacts</string>
    <string name="profileActivity">Profile</string>
    <string name="settingsActivity">Settings</string>
    <string name="folderActivity">Folder</string>
    <string name="foldersActivity">Folders</string>
    <string name="emailActivity">Email</string>
    <string name="emailsActivity">Emails</string>
    <string name="createFolderActivity">Create folder</string>
    <string name="createEmailActivity">Create message</string>
    <string name="addPhoto">Add photo</string>
</resources>
