<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_sort_messages"
        android:key="@string/pref_sort_messages_key">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_messages_by_date_key"
            android:title="@string/pref_sort_messages"
            android:summary="@string/pref_sort_messages_by_date_summary"/>

        <ListPreference
            android:dependency="@string/pref_sort_messages_by_date_key"
            android:dialogTitle="@string/pref_sort_messages"
            android:entries="@array/pref_syncSortingType_entries"
            android:entryValues="@array/pref_syncSortingType_values"
            android:key="@string/pref_sort_messages_by_date_key_list"
            android:title="@string/pref_sort_messages_by_date_title"
            android:summary="%s"/>

        <ListPreference
            android:entries="@array/pref_syncRefreshingType_entries"
            android:entryValues="@array/pref_syncRefreshingType_values"
            android:key="@string/pref_refresh_messages_by_date_key_list"
            android:title="@string/pref_refresh_messages"
            android:summary="%s"/>

    </PreferenceCategory>

</PreferenceScreen>